Added Fixes